version 1.0.3 (not yet released)
           * drawmapboundary now uses axes bgcolor as default fill_color. If
             no color fill wanted, set fill_color='none' (a string).
           * clip coastlines for nplaea,npaeqd,splaea,spaeqd in stereographic
             coordinates to avoid S. America disappearing in some south polar
             plots.
           * add 'round' keyword to Basemap.__init__ for pole-centered
             projections to make them round (clipped at boundinglat) instead
             of square.
           * fix broken daynight terminator function.
           * added kav7 (Kavrayskiy VII) and eck4 (Eckert IV) projections
             (https://github.com/matplotlib/basemap/issues/9).
           * update pyproj source from pyproj.googlecode.com. Includes
             new more robust and accurate pure python code for geodesic computations
             from geographiclib.
           * bug fixes for celestial projections, and non-standard sphere
             radii (https://github.com/matplotlib/basemap/pull/6).
           * fix bug in drawparallels that results in 'KeyError' when drawing
             parallels very close together (0.1 degrees).
           * fix constant in Robinson projection (update PJ_robin.c
             from proj4 svn).
           * fix typo in setup.py (replace "!= ['sdist','clean']" with
             "not in ['sdist','clean']").
           * make sure drawmeridians can handle wrap-around (so that
             if projection is defined in -180 to 0 and user asks for
             meridians from 180 to 360 to be drawn, it should work).
             Only affects projections 'mill','gall','merc' and 'cyl'.

version 1.0.2 (git tag v1.0.2)
           * update include geos from 3.2.0 to 3.3.1 so it compiles with gcc
             4.6.
           * added colorbar method that uses axes_grid toolkit to
             create colorbar axes.
           * replace hasattr(arr,'mask') with numpy.ma.isMA(arr).